--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "private": true,
   "dependencies": {
     "@tweenjs/tween.js": "^18.6.4",
+    "codemirror": "^5.62.2",
+    "css-loader": "^6.2.0",
     "pixi-spine": "^2.1.9",
-    "pixi.js": "^5.3.0"
+    "pixi.js": "^5.3.0",
+    "style-loader": "^3.2.1"
   },
   "devDependencies": {
+    "@types/codemirror": "^5.60.2",
     "@types/node": "^14.0.14",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.6.1",
